--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.4.2",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
