--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "node-uuid": "^1.4.8",
+    "normalizr": "^3.2.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router": "^4.0.0",
